<resources>
    <string name="app_name">FootyApp</string>
    <string name="tv_design_by">Designed by selgnaD 876 Corp</string>
    <string name="tv_no_internet_connection">No Internet Connection</string>
    <string name="tv_league_list_seasons">Seasons</string>
    <string name="tv_league_list_league">League</string>
    <string name="tv_clubs_frag_list_club">Clubs</string>
    <string name="table_header_position">#</string>
    <string name="table_header_team">Team</string>
    <string name="table_header_played">P</string>
    <string name="table_header_wins">W</string>
    <string name="table_header_losses">L</string>
    <string name="table_header_goals">Goals</string>
    <string name="table_header_pts">Pts</string>
    <string name="tv_fav_list_favorites">Favorites</string>
    <string name="club_list_down_arrow">Down Arrow</string>
</resources>