<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LeagueActivity">
    <TextView
        android:id="@+id/tv_no_connection_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_no_internet_connection"
        android:textSize="18sp"
        android:padding="2dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:background="@android:color/holo_red_light"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_league_name"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />
    <TableLayout
        android:id="@+id/league_activity_table_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="?android:listPreferredItemPaddingLeft"
        app:layout_constraintTop_toBottomOf="@id/tv_league_name"
        app:layout_constraintBottom_toBottomOf="parent">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/league_activity_th_table_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_header_position"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/table_header_team"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_header_played"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_header_wins"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/table_header_losses"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/table_header_goals"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/table_header_pts"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>